--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
 <body>
 <h2>JavaScript Is Awesome</h2>
 
-<p>Random Examples</p>
+<p>If you can read this my new version committed!</p>
 
 <p id="demo"></p>
     
