--- a/demo.html
+++ b/demo.html
@@ -2,9 +2,9 @@
 <head>
 </head>
 <body>
-<h2>JavaScript Is Awesome</h2>
+<h2>Time ESports</h2>
 
-<p>If you can read this my new version committed!</p>
+<p>Right after we finish BPA.</p>
 
 <p id="demo"></p>
     
